# MusiQ

./: .gitignore  AddPlaylistBtn.qml  AllSong.qml  CMakeLists.txt  CMakeLists.txt.user.09f8577  Controller.qml  Controller.qml.autosave  Fonts.qml  FullScreenPlayer.qml  Highlite.qml  Home.qml  HomePage.qml  Monitor.qml  Musiclist.qml  MyTextField.qml  Player.qml  SettingAndPrefrences.qml  SettingPage.qml  ShowPage.qml  SongInfoEditPage.qml  SplashScreen.qml  Styles.qml  TimingPage.qml  appsetting.cpp  appsetting.h  backend.h  backend2.cpp  backend2.h  dataprovider.cpp  dataprovider.cpp.autosave  dataprovider.h  files.qrc  icons.qrc  liveimageprovider.cpp  liveimageprovider.h  main.cpp  main.qml  main.qml.autosave  mostplayedlist.cpp  myplayer.pro  (+10 more)
Dependencies/TagLib/include/: config.h
Dependencies/zlib/lib/: zlibd.lib
android/: AndroidManifest.xml
android/res/values/: config.xml
include/: dataprovider.h  dbmanager.h  mostplayedlist.h  songitemmodeler.h  structures.h
qml/: AllSong.qml  Controller.qml  Fonts.qml  HomePage.qml  LikedPage.qml  MyTextField.qml  Separator.qml  SettingAndPrefrences.qml  SettingPage.qml  SongInfoEditPage.qml  SplashScreen.qml  Styles.qml  main.qml
source/: backend.cpp  dataprovider.cpp  dbmanager.cpp  liveimageprovider.cpp  main.cpp  simpleqabstractlist.cpp  songitemmodeler.cpp
